--- a/styles/default.css
+++ b/styles/default.css
@@ -30,7 +30,21 @@
     /* Repositorios */
 
     /* Colaboradores */
-
+    .table,
+    .table caption,
+    .table th,
+    .table td{
+        border: 2px solid #448;
+    }
+    .table caption{
+        border-top: none;
+        border-radius: 0 0 .5rem .5rem;
+    }
+    .table caption,
+    .table thead{
+        color: #eee;
+        background-color: #448;
+    }
     /* Formulario Contacto */
 
     /* Redes sociales */
