styles: agregar propuesta tabla moderna

--- a/styles/default.css
+++ b/styles/default.css
@@ -30,7 +30,13 @@
     /* Repositorios */
 
     /* Colaboradores */
-
+    .table,
+    .table caption,
+    .table tr,
+    .table td{
+        color: #ccc;
+        background-color: rgb(68, 68, 136, .5);
+    }
     /* Formulario Contacto */
 
     /* Redes sociales */
