styles: agregar aspecto general de tabla

--- a/styles/default.css
+++ b/styles/default.css
@@ -30,7 +30,10 @@
     /* Repositorios */
 
     /* Colaboradores */
-
+    .table{
+        max-width: 720px;
+        margin: auto;
+    }
     /* Formulario Contacto */
 
     /* Redes sociales */
