--- a/styles/default.css
+++ b/styles/default.css
@@ -28,7 +28,61 @@
     /* Mapa de Contacto */
 
     /* Repositorios */
-
+    .repo{
+        padding: 1rem;
+    }
+    .repo a{
+        width: 4rem;
+        height: 4rem;
+        position: relative;
+        border-radius: .5rem;
+        padding: .5rem 1rem;
+        text-decoration: none;
+        color: #eee;
+        background: linear-gradient(to right, #88f, #448) left/300%;
+        transition: all .5s ease;
+        overflow: hidden;
+    }
+    .repo a::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        background: var(--bg) center/2.5rem no-repeat;
+    }
+    .repo a:hover{
+        background-position: right;
+        box-shadow: 0 .25rem .5rem #333;
+    }
+    .repo a::after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(51,51,51,.5);
+        transition: all .5s ease;
+    }
+    .repo a:hover::before{
+        background-size: 3rem;
+        animation: glow .5s linear alternate infinite;
+    }
+    .repo a:hover::after{
+        height: 0%;
+    }
+    .github{
+        --bg: url('../assets/icon/github.png')
+    }
+    .gitlab{
+        --bg: url('../assets/icon/gitlab.png')
+    }
+    .bitbucket{
+    
+        --bg: url('../assets/icon/bitbucket.png')
+    }
     /* Colaboradores */
     .table{
         max-width: 720px;
@@ -52,7 +106,12 @@
     /* Formulario Contacto */
 
     /* Redes sociales */
-
+    .social{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: .5rem;
+    }
     /* Derechos de Autor */
 
 /* Small Devices - smartphones */
@@ -62,3 +121,10 @@
 /* Large Devices - Laptops */
 
 /* Extra Large - Desktop */
+
+/* Animaciones */
+@keyframes glow{
+    to{
+        text-shadow: 0 0 .5rem #eee;
+    }
+}
