--- a/styles/default.css
+++ b/styles/default.css
@@ -52,7 +52,12 @@
     /* Formulario Contacto */
 
     /* Redes sociales */
-
+    .social{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: .5rem;
+    }
     /* Derechos de Autor */
 
 /* Small Devices - smartphones */
