--- a/styles/default.css
+++ b/styles/default.css
@@ -28,7 +28,22 @@
     /* Mapa de Contacto */
 
     /* Repositorios */
-
+    .repo{
+        padding: 1rem;
+    }
+    .repo a{
+        border-radius: .5rem;
+        padding: .5rem 1rem;
+        text-decoration: none;
+        color: #eee;
+        background-color: #333;
+    }
+    .repo a::before{
+        content: attr(title);
+    }
+    .repo a:hover{
+        background-color: #666;
+    }
     /* Colaboradores */
     .table{
         max-width: 720px;
