--- a/styles/default.css
+++ b/styles/default.css
@@ -32,17 +32,25 @@
         padding: 1rem;
     }
     .repo a{
+        width: 4rem;
+        height: 4rem;
         position: relative;
         border-radius: .5rem;
         padding: .5rem 1rem;
         text-decoration: none;
         color: #eee;
-        background: linear-gradient(to right, #66c, #333) left/300%;
+        background: linear-gradient(to right, #88f, #448) left/300%;
         transition: all .5s ease;
         overflow: hidden;
     }
     .repo a::before{
-        content: attr(title);
+        content: '';
+        position: absolute;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        background: var(--bg) center/2.5rem no-repeat;
     }
     .repo a:hover{
         background-position: right;
@@ -59,10 +67,21 @@
         transition: all .5s ease;
     }
     .repo a:hover::before{
+        background-size: 3rem;
         animation: glow .5s linear alternate infinite;
     }
     .repo a:hover::after{
         height: 0%;
+    }
+    .github{
+        --bg: url('../assets/icon/github.png')
+    }
+    .gitlab{
+        --bg: url('../assets/icon/gitlab.png')
+    }
+    .bitbucket{
+    
+        --bg: url('../assets/icon/bitbucket.png')
     }
     /* Colaboradores */
     .table{
