--- a/styles/default.css
+++ b/styles/default.css
@@ -32,18 +32,33 @@
         padding: 1rem;
     }
     .repo a{
+        position: relative;
         border-radius: .5rem;
         padding: .5rem 1rem;
         text-decoration: none;
         color: #eee;
         background: linear-gradient(to right, #66c, #333) left/300%;
         transition: all .5s ease;
+        overflow: hidden;
     }
     .repo a::before{
         content: attr(title);
     }
     .repo a:hover{
         background-position: right;
+    }
+    .repo a::after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(51,51,51,.5);
+        transition: all .5s ease;
+    }
+    .repo a:hover::after{
+        height: 0%;
     }
     /* Colaboradores */
     .table{
