styles: agregar iluminacion y sombreado repositorios

--- a/styles/default.css
+++ b/styles/default.css
@@ -46,6 +46,7 @@
     }
     .repo a:hover{
         background-position: right;
+        box-shadow: 0 .25rem .5rem #333;
     }
     .repo a::after{
         content: '';
@@ -56,6 +57,9 @@
         height: 100%;
         background-color: rgba(51,51,51,.5);
         transition: all .5s ease;
+    }
+    .repo a:hover::before{
+        animation: glow .5s linear alternate infinite;
     }
     .repo a:hover::after{
         height: 0%;
@@ -98,3 +102,10 @@
 /* Large Devices - Laptops */
 
 /* Extra Large - Desktop */
+
+/* Animaciones */
+@keyframes glow{
+    to{
+        text-shadow: 0 0 .5rem #eee;
+    }
+}
