index.html: agregar mapa de contacto
styles: establecer posiciones mapa y boton de contacto

scripts: definir constantes globales

scripts: definir constantes y envento mapa de contacto

scripts: implementar condicional boton mapa de contacto

--- a/styles/default.css
+++ b/styles/default.css
@@ -24,9 +24,37 @@
     /* Control de Cambios */
 
 /* Pie de Pagina */
-
+    #footer{
+        position: relative;
+        background: linear-gradient(#6668, #3338);
+    }
     /* Mapa de Contacto */
-
+    .cover{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+    button.map{
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        border: 1px solid #448;
+    }
+    .icon-plus::before{
+        content: '✖️';
+    }
+    .icon-less::before{
+        content: '➖';
+    }
+    .map.active,
+    .map.active + .btn{
+        position: fixed;
+        z-index: 2;
+        opacity: .9;
+    }
     /* Repositorios */
     .repo{
         padding: 1rem;
@@ -87,6 +115,7 @@
     .table{
         max-width: 720px;
         margin: auto;
+        background-color: #eee;
     }
     .table,
     .table caption,
